# SelfDevelop

./: CMakeLists.txt  README.md  main.c  main.ll
Graph/: CMakeLists.txt  LowerGraphPass.cpp
include/: CMakeLists.txt
include/Graph/: CMakeLists.txt  GraphDialect.td  GraphOps.h  GraphOps.td  graph.h  memref.h
include/relay-mlir/Dialect/Relay/: RelayDialect.td  RelayOps.td
include/tiny/: AST.h  CMakeLists.txt  Passes.h  ShapeInferenceInterface.td  TinyDialect.h  TinyDialect.td  TinyOps.h  TinyOps.td
lib/: CMakeLists.txt
lib/Conversion/: CMakeLists.txt
lib/Dialect/Relay/Transforms/: CMakeLists.txt
lib/Support/: CMakeLists.txt
lib/Transforms/: CMakeLists.txt
mlir/: LowerToAffine.cpp  LowerToLLVM.cpp  MLIRGen.cpp  TinyDialect.cpp  TinyOps.cpp
tinyc/: CMakeLists.txt  main.cpp
